Solvent: Support long-press on mobile

--- a/internal/solvent/server/assets/main.css
+++ b/internal/solvent/server/assets/main.css
@@ -17,7 +17,7 @@
 	--disabled-opacity: .2;
 	--disabled-opacity-light-bg: .2;
 	--light-background-color: #f6f7eb;
-	--border-radius: 5px;
+	--border-radius: 6px;
 	--box-shadow: 0px 1px 5px rgba(0, 0, 0, .2);
 }
 
@@ -252,6 +252,7 @@ button:disabled:hover {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
+	border-radius: var(--border-radius);
 }
 
 .ToDoItemCheckbox {
@@ -265,7 +266,7 @@ button:disabled:hover {
 	cursor: pointer;
 }
 
-.ToDoItem.checked>.ToDoItemCheckbox {
+.ToDoItem.checked > .ToDoItemCheckbox {
 	opacity: 1;
 	fill: var(--light-brand-color);
 }
@@ -374,4 +375,11 @@ textarea[name="text-patch"] {
 	background: none;
 	border: none;
 	font-size: 1em;
+}
+
+.deleting {
+	transition: all 500ms ease;
+	transition-delay: 250ms;
+	background-color: var(--alert-color);
+	color: var(--light-background-color);
 }
